# aur-api

./: LICENSE  README.md  aur-api.cabal  stack.yaml
app/: Main.hs
src/Distribution/ArchLinux/: AUR.hs
src/Distribution/ArchLinux/AUR/: RPC.hs  Types.hs
test/: Spec.hs
