name:                aur-api
version:             0.1.0.0
synopsis:            Implements ArchLinux AUR json v5 API
description:         Implements ArchLinux AUR json v5 API defined at:
                     https://wiki.archlinux.org/index.php/AurJson
homepage:            https://github.com/wangbj/aur-api
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           2016 Baojun Wang
category:            Web
build-type:          Simple
bug-reports:         https://github.com/wangbj/aur-api/issues
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.ArchLinux.AUR
                     , Distribution.ArchLinux.AUR.Types
                     , Distribution.ArchLinux.AUR.RPC
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.9.0.0 && < 0.12.0.0
                     , text >= 1.1.0.0 && < 1.3.0.0
                     , bytestring >= 0.10.6.0
                     , mtl >= 2.2.1
                     , exceptions >= 0.8.2.1 && < 1.0.0.0
                     , http-client >= 0.4.0
                     , http-client-tls >= 0.2.0
                     , hspec >= 2.2.0
  default-language:    Haskell2010

executable aur-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson >= 0.9.0.0 && < 0.12.0.0
                     , text >= 1.1.0.0 && < 1.3.0.0
                     , bytestring >= 0.10.6.0
                     , mtl >= 2.2.1                     
                     , exceptions >= 0.8.2.1 && < 1.0.0.0
                     , http-client >= 0.4.0
                     , http-client-tls >= 0.2.0
                     , hspec >= 2.2.0
                     , aur-api
  default-language:    Haskell2010

test-suite aur-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson >= 0.9.0.0 && < 0.12.0.0
                     , text >= 1.1.0.0 && < 1.3.0.0
                     , bytestring >= 0.10.6.0
                     , mtl >= 2.2.1                     
                     , exceptions >= 0.8.2.1 && < 1.0.0.0
                     , http-client >= 0.4.0
                     , http-client-tls >= 0.2.0
                     , hspec >= 2.2.0
                     , aur-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/aur-api
