name:                aur-api
version:             0.1.2.2
synopsis:            ArchLinux AUR json v5 API
description:         Implements ArchLinux AUR json v5 API defined at:
                     .
                     <https://wiki.archlinux.org/index.php/AurJson>
                     .
homepage:            https://github.com/wangbj/aur-api
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           2016 Baojun Wang
category:            Web
build-type:          Simple
bug-reports:         https://github.com/wangbj/aur-api/issues
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distribution.ArchLinux.AUR
                     , Distribution.ArchLinux.AUR.Types
                     , Distribution.ArchLinux.AUR.RPC
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.12
                     , text >= 1.2
                     , bytestring >= 0.10
                     , mtl >= 2.2
                     , exceptions >= 0.8
                     , http-client >= 0.4.0
                     , http-client-tls >= 0.2.0
                     , hspec >= 2.2.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/aur-api
